--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,13 +2,15 @@
   "name": "frontend",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3001",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.25.0",
     "next": "12.0.10",
+    "nookies": "^2.5.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
